@@ -399,7 +399,7 @@ class InstallPluginCommand extends EnvironmentAwareCommand {
     @SuppressForbidden(reason = "Make HEAD request using URLConnection.connect()")
     boolean urlExists(Terminal terminal, String urlString) throws IOException {
         terminal.println(VERBOSE, "Checking if url exists: " + urlString);
-        URL url = new URL(urlString);
+        URL url = URI.create(urlString).toURL();
         assert "https".equals(url.getProtocol()) : "Use of https protocol is required";
         HttpURLConnection urlConnection = (HttpURLConnection) url.openConnection();
         urlConnection.addRequestProperty("User-Agent", "opensearch-plugin-installer");
@@ -427,7 +427,7 @@ class InstallPluginCommand extends EnvironmentAwareCommand {
     @SuppressForbidden(reason = "We use getInputStream to download plugins")
     Path downloadZip(Terminal terminal, String urlString, Path tmpDir, boolean isBatch) throws IOException {
         terminal.println(VERBOSE, "Retrieving zip from " + urlString);
-        URL url = new URL(urlString);
+        URL url = URI.create(urlString).toURL();
         Path zip = Files.createTempFile(tmpDir, null, ".zip");
         URLConnection urlConnection = url.openConnection();
         urlConnection.addRequestProperty("User-Agent", "opensearch-plugin-installer");
@@ -684,7 +684,7 @@ class InstallPluginCommand extends EnvironmentAwareCommand {
      */
     // pkg private for tests
     URL openUrl(String urlString) throws IOException {
-        URL checksumUrl = new URL(urlString);
+        URL checksumUrl = URI.create(urlString).toURL();
         HttpURLConnection connection = (HttpURLConnection) checksumUrl.openConnection();
         if (connection.getResponseCode() == 404) {
             return null;
@@ -863,15 +863,22 @@ class InstallPluginCommand extends EnvironmentAwareCommand {
             tmpRoot,
             env.binDir().resolve(targetFolderName),
             env.configDir().resolve(targetFolderName),
+            env.pluginsDir().resolve("lib").resolve(targetFolderName),
             deleteOnFailure
         );
         movePlugin(tmpRoot, destination);
         return info;
     }
 
-    /** Moves bin and config directories from the plugin if they exist */
-    private void installPluginSupportFiles(PluginInfo info, Path tmpRoot, Path destBinDir, Path destConfigDir, List<Path> deleteOnFailure)
-        throws Exception {
+    /** Moves bin, config, and shared directories from the plugin if they exist */
+    private void installPluginSupportFiles(
+        PluginInfo info,
+        Path tmpRoot,
+        Path destBinDir,
+        Path destConfigDir,
+        Path destLibDir,
+        List<Path> deleteOnFailure
+    ) throws Exception {
         Path tmpBinDir = tmpRoot.resolve("bin");
         if (Files.exists(tmpBinDir)) {
             deleteOnFailure.add(destBinDir);
@@ -883,6 +890,12 @@ class InstallPluginCommand extends EnvironmentAwareCommand {
             // some files may already exist, and we don't remove plugin config files on plugin removal,
             // so any installed config files are left on failure too
             installConfig(info, tmpConfigDir, destConfigDir);
+        }
+
+        Path tmpLibDir = tmpRoot.resolve("shared");
+        if (Files.exists(tmpLibDir)) {
+            deleteOnFailure.add(destLibDir);
+            installLib(info, tmpLibDir, destLibDir);
         }
     }
 
@@ -937,6 +950,34 @@ class InstallPluginCommand extends EnvironmentAwareCommand {
     }
 
     /**
+     * Copies jar files from {@code tmpLibDir} into {@code destLibDir} ({@code plugins/lib/<plugin_name>/}).
+     * These jars are added to the plugin's classloader at startup, making them visible to plugins
+     * that extend this one without exposing the full implementation classpath.
+     */
+    private void installLib(PluginInfo info, Path tmpLibDir, Path destLibDir) throws Exception {
+        if (Files.isDirectory(tmpLibDir) == false) {
+            throw new UserException(PLUGIN_MALFORMED, "shared in plugin " + info.getName() + " is not a directory");
+        }
+        Files.createDirectories(destLibDir);
+        setFileAttributes(destLibDir, PLUGIN_DIR_PERMS);
+
+        try (DirectoryStream<Path> stream = Files.newDirectoryStream(tmpLibDir)) {
+            for (Path srcFile : stream) {
+                if (Files.isDirectory(srcFile)) {
+                    throw new UserException(
+                        PLUGIN_MALFORMED,
+                        "Directories not allowed in shared dir for plugin " + info.getName() + ", found " + srcFile.getFileName()
+                    );
+                }
+                Path destFile = destLibDir.resolve(tmpLibDir.relativize(srcFile));
+                Files.copy(srcFile, destFile);
+                setFileAttributes(destFile, PLUGIN_FILES_PERMS);
+            }
+        }
+        IOUtils.rm(tmpLibDir); // clean up what we just copied
+    }
+
+    /**
      * Copies the files from {@code tmpConfigDir} into {@code destConfigDir}.
      * Any files existing in both the source and destination will be skipped.
      */
@@ -960,16 +1001,13 @@ class InstallPluginCommand extends EnvironmentAwareCommand {
 
         try (DirectoryStream<Path> stream = Files.newDirectoryStream(tmpConfigDir)) {
             for (Path srcFile : stream) {
-                if (Files.isDirectory(srcFile)) {
-                    throw new UserException(PLUGIN_MALFORMED, "Directories not allowed in config dir for plugin " + info.getName());
-                }
-
                 Path destFile = destConfigDir.resolve(tmpConfigDir.relativize(srcFile));
                 if (Files.exists(destFile) == false) {
-                    Files.copy(srcFile, destFile);
-                    setFileAttributes(destFile, CONFIG_FILES_PERMS);
-                    if (destConfigDirAttributes != null) {
-                        setOwnerGroup(destFile, destConfigDirAttributes);
+                    if (Files.isDirectory(srcFile)) {
+                        copyWithPermissions(srcFile, destFile, CONFIG_DIR_PERMS, destConfigDirAttributes);
+                        copyDirectoryRecursively(srcFile, destFile, destConfigDirAttributes);
+                    } else {
+                        copyWithPermissions(srcFile, destFile, CONFIG_FILES_PERMS, destConfigDirAttributes);
                     }
                 }
             }
@@ -992,6 +1030,42 @@ class InstallPluginCommand extends EnvironmentAwareCommand {
         PosixFileAttributeView fileAttributeView = Files.getFileAttributeView(path, PosixFileAttributeView.class);
         if (fileAttributeView != null) {
             Files.setPosixFilePermissions(path, permissions);
+        }
+    }
+
+    /**
+     * Copies a file and sets permissions and ownership
+     */
+    private static void copyWithPermissions(
+        Path srcFile,
+        Path destFile,
+        Set<PosixFilePermission> permissions,
+        PosixFileAttributes attributes
+    ) throws IOException {
+        Files.copy(srcFile, destFile);
+        setFileAttributes(destFile, permissions);
+        if (attributes != null) {
+            setOwnerGroup(destFile, attributes);
+        }
+    }
+
+    /**
+     * Recursively copies directory contents from source to destination.
+     */
+    private static void copyDirectoryRecursively(Path srcDir, Path destDir, PosixFileAttributes destConfigDirAttributes)
+        throws IOException {
+        try (DirectoryStream<Path> stream = Files.newDirectoryStream(srcDir)) {
+            for (Path srcFile : stream) {
+                Path destFile = destDir.resolve(srcDir.relativize(srcFile));
+                if (Files.exists(destFile) == false) {
+                    if (Files.isDirectory(srcFile)) {
+                        copyWithPermissions(srcFile, destFile, CONFIG_DIR_PERMS, destConfigDirAttributes);
+                        copyDirectoryRecursively(srcFile, destFile, destConfigDirAttributes);
+                    } else {
+                        copyWithPermissions(srcFile, destFile, CONFIG_FILES_PERMS, destConfigDirAttributes);
+                    }
+                }
+            }
         }
     }
 
