@@ -77,7 +77,6 @@ import org.opensearch.common.settings.Settings;
 import org.opensearch.common.unit.TimeValue;
 import org.opensearch.common.util.FeatureFlags;
 import org.opensearch.common.util.set.Sets;
-import org.opensearch.common.xcontent.XContentHelper;
 import org.opensearch.core.action.ActionListener;
 import org.opensearch.core.common.Strings;
 import org.opensearch.core.common.unit.ByteSizeValue;
@@ -108,6 +107,7 @@ import org.opensearch.indices.InvalidIndexNameException;
 import org.opensearch.indices.RemoteStoreSettings;
 import org.opensearch.indices.ShardLimitValidator;
 import org.opensearch.indices.SystemIndices;
+import org.opensearch.indices.pollingingest.mappers.IngestionMessageMapper;
 import org.opensearch.indices.replication.common.ReplicationType;
 import org.opensearch.node.remotestore.RemoteStoreNodeAttribute;
 import org.opensearch.node.remotestore.RemoteStoreNodeService;
@@ -155,6 +155,7 @@ import static org.opensearch.cluster.metadata.IndexMetadata.SETTING_REPLICATION_
 import static org.opensearch.cluster.metadata.Metadata.DEFAULT_REPLICA_COUNT_SETTING;
 import static org.opensearch.cluster.metadata.MetadataIndexTemplateService.findContextTemplateName;
 import static org.opensearch.cluster.routing.allocation.decider.ShardsLimitAllocationDecider.INDEX_TOTAL_PRIMARY_SHARDS_PER_NODE_SETTING;
+import static org.opensearch.cluster.routing.allocation.decider.ShardsLimitAllocationDecider.INDEX_TOTAL_REMOTE_CAPABLE_PRIMARY_SHARDS_PER_NODE_SETTING;
 import static org.opensearch.cluster.service.ClusterManagerTask.CREATE_INDEX;
 import static org.opensearch.index.IndexModule.INDEX_STORE_TYPE_SETTING;
 import static org.opensearch.index.IndexSettings.INDEX_TRANSLOG_FLUSH_THRESHOLD_SIZE_SETTING;
@@ -227,9 +228,10 @@ public class MetadataCreateIndexService {
         // Task is onboarded for throttling, it will get retried from associated TransportClusterManagerNodeAction.
         createIndexTaskKey = clusterService.registerClusterManagerTask(CREATE_INDEX, true);
         Supplier<Version> minNodeVersionSupplier = () -> clusterService.state().nodes().getMinNodeVersion();
-        remoteStoreCustomMetadataResolver = isRemoteDataAttributePresent(settings)
-            ? new RemoteStoreCustomMetadataResolver(remoteStoreSettings, minNodeVersionSupplier, repositoriesServiceSupplier, settings)
-            : null;
+        remoteStoreCustomMetadataResolver = RemoteStoreNodeAttribute.isSegmentRepoConfigured(settings)
+            && RemoteStoreNodeAttribute.isTranslogRepoConfigured(settings)
+                ? new RemoteStoreCustomMetadataResolver(remoteStoreSettings, minNodeVersionSupplier, repositoriesServiceSupplier, settings)
+                : null;
     }
 
     public IndexScopedSettings getIndexScopedSettings() {
@@ -631,7 +633,8 @@ public class MetadataCreateIndexService {
     IndexMetadata buildAndValidateTemporaryIndexMetadata(
         final Settings aggregatedIndexSettings,
         final CreateIndexClusterStateUpdateRequest request,
-        final int routingNumShards
+        final int routingNumShards,
+        final ClusterState clusterState
     ) {
 
         final boolean isHiddenAfterTemplates = IndexMetadata.INDEX_HIDDEN_SETTING.get(aggregatedIndexSettings);
@@ -641,7 +644,7 @@ public class MetadataCreateIndexService {
         tmpImdBuilder.setRoutingNumShards(routingNumShards);
         tmpImdBuilder.settings(aggregatedIndexSettings);
         tmpImdBuilder.system(isSystem);
-        addRemoteStoreCustomMetadata(tmpImdBuilder, true);
+        addRemoteStoreCustomMetadata(tmpImdBuilder, true, clusterState);
 
         if (request.context() != null) {
             tmpImdBuilder.context(request.context());
@@ -660,7 +663,9 @@ public class MetadataCreateIndexService {
      * @param tmpImdBuilder     index metadata builder.
      * @param assertNullOldType flag to verify that the old remote store path type is null
      */
-    public void addRemoteStoreCustomMetadata(IndexMetadata.Builder tmpImdBuilder, boolean assertNullOldType) {
+    public void addRemoteStoreCustomMetadata(IndexMetadata.Builder tmpImdBuilder, boolean assertNullOldType, ClusterState clusterState) {
+
+        boolean isRestoreFromSnapshot = !assertNullOldType;
         if (remoteStoreCustomMetadataResolver == null) {
             return;
         }
@@ -674,6 +679,24 @@ public class MetadataCreateIndexService {
         // Determine if the ckp would be stored as translog metadata
         boolean isTranslogMetadataEnabled = remoteStoreCustomMetadataResolver.isTranslogMetadataEnabled();
         remoteCustomData.put(IndexMetadata.TRANSLOG_METADATA_KEY, Boolean.toString(isTranslogMetadataEnabled));
+
+        Optional<DiscoveryNode> remoteNode = clusterState.nodes()
+            .getNodes()
+            .values()
+            .stream()
+            .filter(DiscoveryNode::isRemoteStoreNode)
+            .findFirst();
+
+        String sseEnabledIndex = existingCustomData == null
+            ? null
+            : existingCustomData.get(IndexMetadata.REMOTE_STORE_SSE_ENABLED_INDEX_KEY);
+        if (isRestoreFromSnapshot && sseEnabledIndex != null) {
+            remoteCustomData.put(IndexMetadata.REMOTE_STORE_SSE_ENABLED_INDEX_KEY, sseEnabledIndex);
+        } else if (remoteNode.isPresent()
+            && !isRestoreFromSnapshot
+            && remoteStoreCustomMetadataResolver.isRemoteStoreRepoServerSideEncryptionEnabled()) {
+                remoteCustomData.put(IndexMetadata.REMOTE_STORE_SSE_ENABLED_INDEX_KEY, Boolean.toString(true));
+            }
 
         // Determine the path type for use using the remoteStorePathResolver.
         RemoteStorePathStrategy newPathStrategy = remoteStoreCustomMetadataResolver.getPathStrategy();
@@ -729,7 +752,7 @@ public class MetadataCreateIndexService {
             clusterService.getClusterSettings()
         );
         int routingNumShards = getIndexNumberOfRoutingShards(aggregatedIndexSettings, null);
-        IndexMetadata tmpImd = buildAndValidateTemporaryIndexMetadata(aggregatedIndexSettings, request, routingNumShards);
+        IndexMetadata tmpImd = buildAndValidateTemporaryIndexMetadata(aggregatedIndexSettings, request, routingNumShards, currentState);
 
         return applyCreateIndexWithTemporaryService(
             currentState,
@@ -794,7 +817,7 @@ public class MetadataCreateIndexService {
             clusterService.getClusterSettings()
         );
         int routingNumShards = getIndexNumberOfRoutingShards(aggregatedIndexSettings, null);
-        IndexMetadata tmpImd = buildAndValidateTemporaryIndexMetadata(aggregatedIndexSettings, request, routingNumShards);
+        IndexMetadata tmpImd = buildAndValidateTemporaryIndexMetadata(aggregatedIndexSettings, request, routingNumShards, currentState);
 
         return applyCreateIndexWithTemporaryService(
             currentState,
@@ -847,6 +870,10 @@ public class MetadataCreateIndexService {
 
         Map<String, Object> parsedRequestMappings = MapperService.parseMapping(xContentRegistry, requestMappings);
         result.add(parsedRequestMappings);
+
+        // Apply disable_objects override logic to ensure template priority ordering is respected
+        applyDisableObjectsOverrides(result);
+
         return result;
     }
 
@@ -878,7 +905,7 @@ public class MetadataCreateIndexService {
             clusterService.getClusterSettings()
         );
         final int routingNumShards = getIndexNumberOfRoutingShards(aggregatedIndexSettings, sourceMetadata);
-        IndexMetadata tmpImd = buildAndValidateTemporaryIndexMetadata(aggregatedIndexSettings, request, routingNumShards);
+        IndexMetadata tmpImd = buildAndValidateTemporaryIndexMetadata(aggregatedIndexSettings, request, routingNumShards, currentState);
 
         return applyCreateIndexWithTemporaryService(
             currentState,
@@ -917,27 +944,162 @@ public class MetadataCreateIndexService {
         List<CompressedXContent> templateMappings,
         NamedXContentRegistry xContentRegistry
     ) throws Exception {
-        Map<String, Object> mappings = MapperService.parseMapping(xContentRegistry, requestMappings);
-        // apply templates, merging the mappings into the request mapping if exists
+        // Step 1: Collect all mappings into a list
+        List<Map<String, Object>> allMappings = new ArrayList<>();
+
+        // Add template mappings first (lower priority)
         for (CompressedXContent mapping : templateMappings) {
             if (mapping != null) {
                 Map<String, Object> templateMapping = MapperService.parseMapping(xContentRegistry, mapping.string());
-                if (templateMapping.isEmpty()) {
-                    // Someone provided an empty '{}' for mappings, which is okay, but to avoid
-                    // tripping the below assertion, we can safely ignore it
-                    continue;
-                }
-                assert templateMapping.size() == 1 : "expected exactly one mapping value, got: " + templateMapping;
-                // pre-8x templates may have a wrapper type other than _doc, so we re-wrap things here
-                templateMapping = Collections.singletonMap(MapperService.SINGLE_MAPPING_NAME, templateMapping.values().iterator().next());
-                if (mappings.isEmpty()) {
-                    mappings = templateMapping;
-                } else {
-                    XContentHelper.mergeDefaults(mappings, templateMapping);
+                if (!templateMapping.isEmpty()) {
+                    assert templateMapping.size() == 1 : "expected exactly one mapping value, got: " + templateMapping;
+                    // pre-8x templates may have a wrapper type other than _doc, so we re-wrap things here
+                    templateMapping = new HashMap<>(Map.of(MapperService.SINGLE_MAPPING_NAME, templateMapping.values().iterator().next()));
+                    allMappings.add(templateMapping);
                 }
             }
         }
-        return mappings;
+
+        // Add request mapping last (highest priority)
+        Map<String, Object> requestMapping = MapperService.parseMapping(xContentRegistry, requestMappings);
+        if (!requestMapping.isEmpty()) {
+            allMappings.add(requestMapping);
+        }
+
+        // Step 2: Apply shared disable_objects override logic (same as V2 templates)
+        applyDisableObjectsOverrides(allMappings);
+
+        // Step 3: Merge all mappings using field-aware replacement logic
+        // Process mappings in forward order, with special handling for request mappings
+        Map<String, Object> result = new HashMap<>();
+        boolean hasRequestMapping = !MapperService.parseMapping(xContentRegistry, requestMappings).isEmpty();
+
+        for (int i = 0; i < allMappings.size(); i++) {
+            Map<String, Object> mapping = allMappings.get(i);
+            boolean isRequestMapping = hasRequestMapping && (i == allMappings.size() - 1);
+
+            if (result.isEmpty()) {
+                result = new HashMap<>(mapping);
+            } else {
+                if (isRequestMapping) {
+                    // For request mappings: request wins over templates
+                    Map<String, Object> newMapping = new HashMap<>(mapping);
+                    mergeTemplateFieldMappings(newMapping, result);
+                    result = newMapping;
+                } else {
+                    // For template mappings: accumulated result (higher priority) wins over current (lower priority)
+                    mergeTemplateFieldMappings(result, mapping);
+                }
+            }
+        }
+
+        return result;
+    }
+
+    /**
+     * Merges template mappings with complete field definition replacement.
+     * Higher priority mappings completely override field definitions from lower priority mappings.
+     *
+     * @param target the target mapping to merge into (higher priority)
+     * @param source the source mapping to merge from (lower priority)
+     */
+    private static void mergeTemplateFieldMappings(Map<String, Object> target, Map<String, Object> source) {
+        for (Map.Entry<String, Object> sourceEntry : source.entrySet()) {
+            String key = sourceEntry.getKey();
+            Object sourceValue = sourceEntry.getValue();
+
+            if (!target.containsKey(key)) {
+                // Key doesn't exist in target, add it
+                target.put(key, sourceValue);
+            } else if (key.equals("properties") && sourceValue instanceof Map && target.get(key) instanceof Map) {
+                // Special handling for "properties" section - merge field definitions with replacement
+                @SuppressWarnings("unchecked")
+                Map<String, Object> targetProperties = (Map<String, Object>) target.get(key);
+                @SuppressWarnings("unchecked")
+                Map<String, Object> sourceProperties = (Map<String, Object>) sourceValue;
+                mergeFieldProperties(targetProperties, sourceProperties);
+            } else if (sourceValue instanceof Map && target.get(key) instanceof Map) {
+                // Recursively merge other Map objects (but not field definitions)
+                @SuppressWarnings("unchecked")
+                Map<String, Object> targetMap = (Map<String, Object>) target.get(key);
+                @SuppressWarnings("unchecked")
+                Map<String, Object> sourceMap = (Map<String, Object>) sourceValue;
+                mergeTemplateFieldMappings(targetMap, sourceMap);
+            }
+            // For non-Map values or when target already has the key, target value takes precedence (no override)
+        }
+    }
+
+    /**
+     * Merges field properties with complete field definition replacement.
+     * If a field exists in both maps, the target field definition completely replaces the source.
+     *
+     * @param targetProperties the target properties map (higher priority)
+     * @param sourceProperties the source properties map (lower priority)
+     */
+    private static void mergeFieldProperties(Map<String, Object> targetProperties, Map<String, Object> sourceProperties) {
+        for (Map.Entry<String, Object> sourceField : sourceProperties.entrySet()) {
+            String fieldName = sourceField.getKey();
+            Object sourceFieldDef = sourceField.getValue();
+
+            if (!targetProperties.containsKey(fieldName)) {
+                // Field doesn't exist in target, add it
+                targetProperties.put(fieldName, sourceFieldDef);
+            } else {
+                // If field exists in target, target takes precedence (higher priority template wins)
+                // This ensures complete field definition replacement rather than property merging
+            }
+        }
+    }
+
+    /**
+     * Applies disable_objects override logic to a list of mappings.
+     * Later mappings in the list override earlier ones for the disable_objects setting,
+     * ensuring template priority ordering is respected.
+     *
+     * @param mappings List of mapping objects to process
+     */
+    static void applyDisableObjectsOverrides(List<Map<String, Object>> mappings) {
+        if (mappings == null || mappings.size() <= 1) {
+            return; // No overrides needed for null, empty, or single mapping
+        }
+
+        Object finalDisableObjectsValue = null;
+        boolean hasDisableObjects = false;
+
+        // Find the last (highest priority) disable_objects value
+        for (Map<String, Object> mapping : mappings) {
+            if (mapping == null) {
+                continue; // Skip null mappings
+            }
+
+            Object docObj = mapping.get(MapperService.SINGLE_MAPPING_NAME);
+            if (docObj instanceof Map) {
+                @SuppressWarnings("unchecked")
+                Map<String, Object> doc = (Map<String, Object>) docObj;
+                if (doc.containsKey("disable_objects")) {
+                    finalDisableObjectsValue = doc.get("disable_objects");
+                    hasDisableObjects = true;
+                }
+            }
+        }
+
+        // If we found a disable_objects value, apply it to all mappings that have a _doc section
+        if (hasDisableObjects) {
+            for (Map<String, Object> mapping : mappings) {
+                if (mapping == null) {
+                    continue; // Skip null mappings
+                }
+
+                Object docObj = mapping.get(MapperService.SINGLE_MAPPING_NAME);
+                if (docObj instanceof Map) {
+                    @SuppressWarnings("unchecked")
+                    Map<String, Object> doc = (Map<String, Object>) docObj;
+                    // Override with the final disable_objects value
+                    doc.put("disable_objects", finalDisableObjectsValue);
+                }
+            }
+        }
     }
 
     /**
@@ -1109,6 +1271,38 @@ public class MetadataCreateIndexService {
     }
 
     /**
+     * Validates ingestion source settings for version compatibility and mapper settings correctness.
+     * In a mixed cluster, older nodes may not recognize newer mapper types (e.g., field_mapping),
+     * which would cause failures when those nodes try to initialize the ingestion engine.
+     * Also validates that mapper_settings keys are recognized for the configured mapper_type.
+     */
+    static void validateIngestionSourceSettings(Settings settings, ClusterState state) {
+        if (IndexMetadata.INGESTION_SOURCE_MAPPER_TYPE_SETTING.exists(settings) == false) {
+            return;
+        }
+
+        IngestionMessageMapper.MapperType mapperType = IndexMetadata.INGESTION_SOURCE_MAPPER_TYPE_SETTING.get(settings);
+        Map<String, Object> mapperSettings = IndexMetadata.INGESTION_SOURCE_MAPPER_SETTINGS.getAsMap(settings);
+
+        // Version check for mixed cluster compatibility
+        if (mapperType == IngestionMessageMapper.MapperType.FIELD_MAPPING) {
+            Version minNodeVersion = state.nodes().getMinNodeVersion();
+            if (minNodeVersion.before(Version.V_3_6_0)) {
+                throw new IllegalArgumentException(
+                    "mapper_type [field_mapping] requires all nodes in the cluster to be on version ["
+                        + Version.V_3_6_0
+                        + "] or later, but the minimum node version is ["
+                        + minNodeVersion
+                        + "]"
+                );
+            }
+        }
+
+        // Settings validation to the mapper
+        IngestionMessageMapper.validateSettings(mapperType, mapperSettings);
+    }
+
+    /**
      * Updates index settings to set replication strategy by default based on cluster level settings or remote store
      * node attributes
      * @param settingsBuilder index settings builder to be updated with relevant settings
@@ -1176,12 +1370,21 @@ public class MetadataCreateIndexService {
                 .findFirst();
 
             if (remoteNode.isPresent()) {
-                translogRepo = RemoteStoreNodeAttribute.getTranslogRepoName(remoteNode.get().getAttributes());
                 segmentRepo = RemoteStoreNodeAttribute.getSegmentRepoName(remoteNode.get().getAttributes());
-                if (segmentRepo != null && translogRepo != null) {
-                    settingsBuilder.put(SETTING_REMOTE_STORE_ENABLED, true)
-                        .put(SETTING_REMOTE_SEGMENT_STORE_REPOSITORY, segmentRepo)
-                        .put(SETTING_REMOTE_TRANSLOG_STORE_REPOSITORY, translogRepo);
+                translogRepo = RemoteStoreNodeAttribute.getTranslogRepoName(remoteNode.get().getAttributes());
+                if (segmentRepo != null) {
+                    settingsBuilder.put(SETTING_REMOTE_STORE_ENABLED, true).put(SETTING_REMOTE_SEGMENT_STORE_REPOSITORY, segmentRepo);
+                    if (translogRepo != null) {
+                        settingsBuilder.put(SETTING_REMOTE_TRANSLOG_STORE_REPOSITORY, translogRepo);
+                    } else if (isMigratingToRemoteStore(clusterSettings)) {
+                        ValidationException validationException = new ValidationException();
+                        validationException.addValidationErrors(
+                            Collections.singletonList(
+                                "Cluster is migrating to remote store but remote translog is not configured, failing index creation"
+                            )
+                        );
+                        throw new IndexCreationException(indexName, validationException);
+                    }
                 } else {
                     ValidationException validationException = new ValidationException();
                     validationException.addValidationErrors(
@@ -1461,6 +1664,7 @@ public class MetadataCreateIndexService {
         validateIndexName(request.index(), state);
         validateIndexSettings(request.index(), request.settings(), forbidPrivateIndexSettings);
         validateContext(request);
+        validateIngestionSourceSettings(request.settings(), state);
     }
 
     public void validateIndexSettings(String indexName, final Settings settings, final boolean forbidPrivateIndexSettings)
@@ -1857,9 +2061,10 @@ public class MetadataCreateIndexService {
     public static void validateIndexTotalPrimaryShardsPerNodeSetting(Settings indexSettings) {
         // Get the setting value
         int indexPrimaryShardsPerNode = INDEX_TOTAL_PRIMARY_SHARDS_PER_NODE_SETTING.get(indexSettings);
+        int indexRemoteCapablePrimaryShardsPerNode = INDEX_TOTAL_REMOTE_CAPABLE_PRIMARY_SHARDS_PER_NODE_SETTING.get(indexSettings);
 
         // If default value (-1), no validation needed
-        if (indexPrimaryShardsPerNode == -1) {
+        if (indexPrimaryShardsPerNode == -1 && indexRemoteCapablePrimaryShardsPerNode == -1) {
             return;
         }
 
@@ -1867,7 +2072,11 @@ public class MetadataCreateIndexService {
         boolean isRemoteStoreEnabled = IndexMetadata.INDEX_REMOTE_STORE_ENABLED_SETTING.get(indexSettings);
         if (!isRemoteStoreEnabled) {
             throw new IllegalArgumentException(
-                "Setting [" + INDEX_TOTAL_PRIMARY_SHARDS_PER_NODE_SETTING.getKey() + "] can only be used with remote store enabled clusters"
+                "Setting ["
+                    + INDEX_TOTAL_PRIMARY_SHARDS_PER_NODE_SETTING.getKey()
+                    + "] or ["
+                    + INDEX_TOTAL_REMOTE_CAPABLE_PRIMARY_SHARDS_PER_NODE_SETTING.getKey()
+                    + "] can only be used with remote store enabled clusters"
             );
         }
     }
