@@ -32,18 +32,23 @@
 
 package org.opensearch.search.profile;
 
+import org.apache.lucene.search.Query;
 import org.opensearch.common.annotation.PublicApi;
 import org.opensearch.search.internal.ContextIndexSearcher;
 import org.opensearch.search.profile.aggregation.AggregationProfiler;
 import org.opensearch.search.profile.aggregation.ConcurrentAggregationProfiler;
+import org.opensearch.search.profile.fetch.FetchProfiler;
 import org.opensearch.search.profile.query.ConcurrentQueryProfileTree;
 import org.opensearch.search.profile.query.ConcurrentQueryProfiler;
 import org.opensearch.search.profile.query.InternalQueryProfileTree;
 import org.opensearch.search.profile.query.QueryProfiler;
 
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.function.Function;
+import java.util.function.Supplier;
 
 /**
  * Wrapper around all the profilers that makes management easier.
@@ -56,22 +61,35 @@ public final class Profilers {
     private final ContextIndexSearcher searcher;
     private final List<QueryProfiler> queryProfilers;
     private final AggregationProfiler aggProfiler;
+    private final FetchProfiler fetchProfiler;
     private final boolean isConcurrentSegmentSearchEnabled;
+    private final Function<Query, Collection<Supplier<ProfileMetric>>> customPluginMetrics;
 
-    /** Sole constructor. This {@link Profilers} instance will initially wrap one {@link QueryProfiler}. */
+    /** This {@link Profilers} instance will initially wrap one {@link QueryProfiler}. */
     public Profilers(ContextIndexSearcher searcher, boolean isConcurrentSegmentSearchEnabled) {
+        this(searcher, isConcurrentSegmentSearchEnabled, query -> Collections.emptyList());
+    }
+
+    /** This {@link Profilers} instance will initially wrap one {@link QueryProfiler}. */
+    public Profilers(
+        ContextIndexSearcher searcher,
+        boolean isConcurrentSegmentSearchEnabled,
+        Function<Query, Collection<Supplier<ProfileMetric>>> customPluginMetrics
+    ) {
         this.searcher = searcher;
         this.isConcurrentSegmentSearchEnabled = isConcurrentSegmentSearchEnabled;
         this.queryProfilers = new ArrayList<>();
         this.aggProfiler = isConcurrentSegmentSearchEnabled ? new ConcurrentAggregationProfiler() : new AggregationProfiler();
+        this.fetchProfiler = new FetchProfiler();
+        this.customPluginMetrics = customPluginMetrics;
         addQueryProfiler();
     }
 
     /** Switch to a new profile. */
     public QueryProfiler addQueryProfiler() {
         QueryProfiler profiler = isConcurrentSegmentSearchEnabled
-            ? new ConcurrentQueryProfiler(new ConcurrentQueryProfileTree())
-            : new QueryProfiler(new InternalQueryProfileTree());
+            ? new ConcurrentQueryProfiler(new ConcurrentQueryProfileTree(customPluginMetrics), customPluginMetrics)
+            : new QueryProfiler(new InternalQueryProfileTree(customPluginMetrics));
         searcher.setProfiler(profiler);
         queryProfilers.add(profiler);
         return profiler;
@@ -79,7 +97,7 @@ public final class Profilers {
 
     /** Get the current profiler. */
     public QueryProfiler getCurrentQueryProfiler() {
-        return queryProfilers.get(queryProfilers.size() - 1);
+        return queryProfilers.getLast();
     }
 
     /** Return the list of all created {@link QueryProfiler}s so far. */
@@ -90,6 +108,10 @@ public final class Profilers {
     /** Return the {@link AggregationProfiler}. */
     public AggregationProfiler getAggregationProfiler() {
         return aggProfiler;
+    }
+
+    public FetchProfiler getFetchProfiler() {
+        return fetchProfiler;
     }
 
 }
